feature (site): changement theme

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  tchiroko
 
 # Build settings
 markdown:         kramdown
-theme:            minima
+theme:            cayman
 plugins:
   - jekyll-feed
 
