--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description:      >- # this means to ignore newlines until "baseurl:"
   Site d'histoire X GAY
 baseurl:          "" # the subpath of your site, e.g. /blog
 url:              "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: tchiroko
+twitter_username: yaoitoru
 github_username:  tchiroko
 
 # Build settings
