--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ baseurl:          "" # the subpath of your site, e.g. /blog
 url:              "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: yaoitoru
 github_username:  tchiroko
+google_analytics: UA-109528543-1
 
 # Build settings
 markdown:         kramdown
