--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ url:              "" # the base hostname & protocol for your site, e.g. http://e
 twitter_username: yaoitoru
 github_username:  tchiroko
 google_analytics: UA-109528543-1
+google_verify:    L4HJfBilg2eGRIgmMNEeY_p62xpWjCgjX--Vo_IRWzE
 
 # Build settings
 markdown:         kramdown
