feature (site): changement page principal

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title:            Tchiroko
+lang:             fr_FR
 email:            tchiroko@gmail.com
 description:      >- # this means to ignore newlines until "baseurl:"
   Site d'histoire X GAY
