--- a/_config.yml
+++ b/_config.yml
@@ -13,23 +13,30 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title:             Tchiroko
-github:
-  is_project_page: true
-lang:              fr_FR
-email:             tchiroko@gmail.com
-description:       >- # this means to ignore newlines until "baseurl:"
+title:            Tchiroko
+permalink:        /histoire/:title/
+lang:             fr_FR
+email:            tchiroko@gmail.com
+description:      >- # this means to ignore newlines until "baseurl:"
   Site d'histoire X GAY
-baseurl:           "" # the subpath of your site, e.g. /blog
-url:               "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username:  yaoitoru
-github_username:   tchiroko
-google_analytics:  UA-109528543-1
-google_verify:     L4HJfBilg2eGRIgmMNEeY_p62xpWjCgjX--Vo_IRWzE
+baseurl:          "" # the subpath of your site, e.g. /blog
+url:              "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: yaoitoru
+github_username:  tchiroko
+google_analytics: UA-109528543-1
+google_verify:    L4HJfBilg2eGRIgmMNEeY_p62xpWjCgjX--Vo_IRWzE
+exclude:
+  - css
+  - js
+  - webpack.config.js
+  - package.json
+  - package-lock.json
+  - node_modules
+  - Gemfile
+  - Gemfile.lock
 
 # Build settings
-markdown:          kramdown
-theme:             jekyll-theme-cayman
+markdown:         kramdown
 plugins:
   - jekyll-feed
 
