feature (site) : Modification theme + ajout disqus

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title:            Tchiroko
+disqus:
+  shortname:      tchiroko
 permalink:        /histoire/:title/
 lang:             fr_FR
 email:            tchiroko@gmail.com
