--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,10 @@ disqus:
 permalink:        /histoire/:title/
 lang:             fr_FR
 email:            tchiroko@gmail.com
-description:      >- # this means to ignore newlines until "baseurl:"
-  Site d'histoire X GAY
+metatags:
+  keywords:       histoire, gay
+  description:    >- # this means to ignore newlines until "baseurl:"
+    Site d'histoire X GAY
 baseurl:          "" # the subpath of your site, e.g. /blog
 url:              "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: yaoitoru
