--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,7 @@ markdown:         kramdown
 plugins:
   - jekyll-feed
   - jekyll-paginate
+  - jekyll-sitemap
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
